# starboard-be

./: pyproject.toml  requirements.txt  server.py  utils.py
data/: 280_Richards_Pro_Forma.csv  280_Richards_Rent_Roll.csv  Tenant_History.csv  document.md
