[project]
name = "rag-approach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.10",
    "llama-index-embeddings-cohere>=0.5.0",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-gemini>=0.4.14",
    "llama-index-llms-openai>=0.3.44",
    "llama-index-vector-stores-chroma>=0.4.1",
    "openai>=1.82.0",
    "python-multipart>=0.0.20",
]
